Refresh Dockerfile and instructions.
Related to https://github.com/llvm/mlir-npcomp/issues/266

--- a/docker/pytorch-nightly/Dockerfile
+++ b/docker/pytorch-nightly/Dockerfile
@@ -1,15 +1,14 @@
 FROM ubuntu:20.04
-MAINTAINER Stella Laurenzo <stellaraccident@gmail.com>
+LABEL org.opencontainers.image.authors="Stella Laurenzo <stellaraccident@gmail.com>, Sean Silva <silvasean@google.com>"
 
 USER root
 ENV DEBIAN_FRONTEND=noninteractive
-RUN apt update
+RUN apt-get update
 
 # Python and build system.
-RUN apt install -y python3 python-is-python3
-RUN apt install -y python3-pip 
-RUN apt install -y git cmake ccache ninja-build
-RUN apt install -y clang lld
+RUN apt-get install -y python-is-python3 python3-pip
+RUN apt-get install -y git cmake ccache ninja-build
+RUN apt-get install -y clang lld
 RUN ln -s /usr/bin/llvm-symbolizer-10 /usr/bin/llvm-symbolizer
 
 # Install PyTorch
@@ -20,14 +19,13 @@ RUN pip3 install --pre torch torchvision -f https://download.pytorch.org/whl/nig
 RUN ln -s /usr/local/lib/python3.8/dist-packages/torch /pytorch
 
 # Build configuration
-RUN mkdir /ccache && ln -s /usr/bin/ccache /ccache/clang && ln -s /usr/bin/ccache /ccache/clang++
-RUN mkdir /build && chmod a+rw /build /ccache
-ENV PATH "/ccache:${PATH}"
+RUN mkdir /build && chmod a+rw /build
 ENV CC clang
 ENV CXX clang++
-# Binary distributions of torch force CXX11 ABI 0 :(
-ENV CXXFLAGS "-D_GLIBCXX_USE_CXX11_ABI=0"
 ENV LDFLAGS "-fuse-ld=/usr/bin/ld.lld"
+ENV CMAKE_GENERATOR "Ninja"
+ENV CMAKE_C_COMPILER_LAUNCHER ccache
+ENV CMAKE_CXX_COMPILER_LAUNCHER ccache
 ENV CMAKE_PREFIX_PATH /pytorch/share/cmake
 ENV LLVM_BUILD_DIR /build/llvm-build
 ENV LLVM_INSTALL_DIR /build/llvm-install
