--- a/tools/refback-run/CMakeLists.txt
+++ b/tools/refback-run/CMakeLists.txt
@@ -1,15 +1,15 @@
-# npcomp-run-mlir is always linked dynamically as we want to distribute the
+# refback-run is always linked dynamically as we want to distribute the
 # binaries with the python packages for hacking/debugging.
 
 get_property(dialect_libs GLOBAL PROPERTY NPCOMP_DIALECT_LIBS)
 get_property(conversion_libs GLOBAL PROPERTY NPCOMP_CONVERSION_LIBS)
 
-add_npcomp_executable(npcomp-run-mlir
-  npcomp-run-mlir.cpp
+add_npcomp_executable(refback-run
+  refback-run.cpp
   )
 
-llvm_update_compile_flags(npcomp-run-mlir)
-target_link_libraries(npcomp-run-mlir PRIVATE
+llvm_update_compile_flags(refback-run)
+target_link_libraries(refback-run PRIVATE
   NPCOMPCAPI
   NPCOMPInitAll
   MLIRAnalysis
@@ -24,6 +24,6 @@ target_link_libraries(npcomp-run-mlir PRIVATE
   ${conversion_libs}
   ${dialect_libs}
 )
-add_dependencies(npcomp-run-mlir
+add_dependencies(refback-run
   NPCOMPCompilerRuntimeShlib
   )
