--- a/lib/Backend/Common/CMakeLists.txt
+++ b/lib/Backend/Common/CMakeLists.txt
@@ -17,6 +17,7 @@ add_npcomp_library(NPCOMPCommonBackend
   MLIRTensor
   MLIRStandard
   MLIRMath
+  IREEDialectsIREEDialect
   )
 
 mlir_check_all_link_libraries(NPCOMPCommonBackend)
