--- a/lib/Dialect/CMakeLists.txt
+++ b/lib/Dialect/CMakeLists.txt
@@ -3,3 +3,4 @@ add_subdirectory(Numpy)
 add_subdirectory(Refback)
 add_subdirectory(Refbackrt)
 add_subdirectory(Torch)
+add_subdirectory(TorchConversion)
