Add a few missing deps exposed by stricter linking with BFD.

--- a/lib/Dialect/TorchConversion/Transforms/CMakeLists.txt
+++ b/lib/Dialect/TorchConversion/Transforms/CMakeLists.txt
@@ -16,6 +16,7 @@ add_npcomp_conversion_library(NPCOMPTorchConversionPasses
   LINK_LIBS PUBLIC
   MLIRIR
   MLIRPass
+  MLIRStandardOpsTransforms
   NPCOMPTorchConversionDialect
   NPCOMPTorchDialect
   NPCOMPTorchPasses
