--- a/lib/Dialect/Torch/Transforms/CMakeLists.txt
+++ b/lib/Dialect/Torch/Transforms/CMakeLists.txt
@@ -21,6 +21,7 @@ add_npcomp_conversion_library(NPCOMPTorchPasses
   LINK_LIBS PUBLIC
   MLIRIR
   MLIRPass
+  MLIRTransforms
   NPCOMPTorchDialect
   NPCOMPInterfaces
 )
