Update iree-dialects to IREE 7d9e4909f5524e275726b2754d3ad050818d56ae

--- a/external/iree-dialects/BUILD
+++ b/external/iree-dialects/BUILD
@@ -2,6 +2,7 @@ load("@llvm-project//mlir:tblgen.bzl", "gentbl_cc_library", "td_library")
 
 package(
     default_visibility = ["//visibility:public"],
+    features = ["layering_check"],
     licenses = ["notice"],
 )
 
@@ -65,7 +66,9 @@ cc_library(
     includes = ["include"],
     deps = [
         ":IREEOpsIncGen",
+        "@llvm-project//llvm:Support",
         "@llvm-project//mlir:IR",
+        "@llvm-project//mlir:Support",
     ],
 )
 
