Temporarily disable wheel building
It will be re-enabled after the torch-mlir excision is completed.

--- a/.github/workflows/buildAndTest.yml
+++ b/.github/workflows/buildAndTest.yml
@@ -79,11 +79,11 @@ jobs:
       uses: hendrikmuhs/ccache-action@4687d037e4d7cf725512d9b819137a3af34d39b3
       with:
         key: ${{ runner.os }}-wheel-${{ steps.get-submodule-hash.outputs.hash }}
-    - name: Build wheels
-      run: |
-        cd $GITHUB_WORKSPACE
-        ./build_tools/build_python_wheels.sh
-    - uses: actions/upload-artifact@v2
-      with:
-        name: ubuntu-20.04-wheels
-        path: wheelhouse/
+    #- name: Build wheels
+    #  run: |
+    #    cd $GITHUB_WORKSPACE
+    #    ./build_tools/build_python_wheels.sh
+    #- uses: actions/upload-artifact@v2
+    #  with:
+    #    name: ubuntu-20.04-wheels
+    #    path: wheelhouse/
