Try to fix nondeterminism in check-npcomp-all.

--- a/external/torch-mlir/TorchPlugin/python/CMakeLists.txt
+++ b/external/torch-mlir/TorchPlugin/python/CMakeLists.txt
@@ -21,4 +21,7 @@ add_mlir_python_modules(TorchMLIRPluginPythonModules
   COMMON_CAPI_LINK_LIBS
     TorchMLIRAggregateCAPI
   )
-add_dependencies(TorchMLIRPluginPythonModules TorchMLIRTorchPlugin)
+add_dependencies(TorchMLIRPluginPythonModules
+  TorchMLIRTorchPlugin
+  TorchMLIRPythonModules
+  )
