Again try to fix nondeterminism in check-npcomp-all.

--- a/external/torch-mlir/TorchPlugin/test/CMakeLists.txt
+++ b/external/torch-mlir/TorchPlugin/test/CMakeLists.txt
@@ -8,7 +8,7 @@ configure_lit_site_cfg(
 set(TEST_DEPENDS
   FileCheck count not
   torch-mlir-opt
-  TorchMLIRTorchPlugin
+  TorchMLIRPluginPythonModules
   )
 
 add_lit_testsuite(check-torch-mlir-plugin
