Fold torch_mlir_dialects python package into `torch_mlir`.
After this change, there are now just two subdirectories in the
`python_packages` directory in our combined build:
- `npcomp_core` with all the npcomp stuff
- `torch_mlir` with all the `torch-mlir` stuff.

The combined `torch_mlir` build will be packaged for use by `pip`.
There isn't anything super useful for wider use in `npcomp_core` so for
now we aren't going to package that one.

--- a/external/torch-mlir/CMakeLists.txt
+++ b/external/torch-mlir/CMakeLists.txt
@@ -74,3 +74,8 @@ if(MLIR_ENABLE_BINDINGS_PYTHON)
 endif()
 
 add_subdirectory(test)
+add_custom_target(check-torch-mlir-all)
+add_dependencies(check-torch-mlir-all
+  check-torch-mlir
+  check-torch-mlir-plugin
+  )
