Factor out definition of the _torch_mlir.get_registered_ops function.
It didn't make sense in the main registration file.

--- a/external/torch-mlir/TorchPlugin/csrc/CMakeLists.txt
+++ b/external/torch-mlir/TorchPlugin/csrc/CMakeLists.txt
@@ -14,6 +14,7 @@ link_directories("${TORCH_INSTALL_PREFIX}/lib")
 
 add_library(TorchMLIRTorchPlugin SHARED
   class_annotator.cpp
+  get_registered_ops.cpp
   function_importer.cpp
   module_builder.cpp
   node_importer.cpp
