Build fix: Include the builtin and std dialects in the torch_mlir python build.

--- a/external/torch-mlir/python/CMakeLists.txt
+++ b/external/torch-mlir/python/CMakeLists.txt
@@ -44,6 +44,8 @@ set(_source_components
   # TODO: Core is now implicitly building/registering all dialects, increasing
   # build burden by ~5x. Make it stop.
   MLIRPythonSources.Core
+  MLIRPythonSources.Dialects.builtin
+  MLIRPythonSources.Dialects.std
   TorchMLIRPythonSources
   TorchMLIRPythonExtensions
 )
