Bring up new RefBackend.
`tools/torchscript_e2e_test.sh` is all green.

This needs a few passes I put into torch-mlir/lib/RefBackend (not to be
confused with `npcomp/lib/RefBackend`, which will soon be deleted).

For the sake of review, since this brings together a lot of things, I
split this into its own commit. I temporarily commented out some "list"
stuff that we are going to remove as part of the torch-mlir refocus.

--- a/external/torch-mlir/lib/CMakeLists.txt
+++ b/external/torch-mlir/lib/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_subdirectory(CAPI)
 add_subdirectory(Dialect)
+add_subdirectory(RefBackend)
 
 add_mlir_library(TorchMLIRInitAll
   InitAll.cpp
@@ -12,6 +13,7 @@ add_mlir_library(TorchMLIRInitAll
   MLIRSupport
   TorchMLIRTorchDialect
   TorchMLIRTorchPasses
+  TorchMLIRRefBackend
 )
 
 torch_mlir_target_includes(TorchMLIRInitAll)
