--- a/lib/Dialect/TorchConversion/Transforms/CMakeLists.txt
+++ b/lib/Dialect/TorchConversion/Transforms/CMakeLists.txt
@@ -2,6 +2,7 @@ add_npcomp_conversion_library(NPCOMPTorchConversionPasses
   BackendTypeConversion.cpp
   Passes.cpp
   VerifyInvariantsBeforeBackendLowering.cpp
+  VerifyLinalgOnTensorsBackendContract.cpp
 
   ADDITIONAL_HEADER_DIRS
   ${PROJECT_SOURCE_DIR}/include/npcomp/Dialect/TorchConversion/Transforms
