Port the bulk of the remaining code to torch-mlir
This leaves no real code outside torch-mlir.

This also renames the "npcomp backend contract" to "linalg on tensors
backend contract" as the name of the abstraction layer that RefBackend
(IREE too) accepts.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -203,8 +203,7 @@ add_custom_target(check-npcomp)
 add_custom_target(check-npcomp-all)
 add_dependencies(check-npcomp-all
   check-npcomp
-  check-npcomp-python
-  check-torch-mlir
+  check-torch-mlir-all
   )
 
 add_subdirectory(lib)
