--- a/external/torch-mlir/CMakeLists.txt
+++ b/external/torch-mlir/CMakeLists.txt
@@ -66,6 +66,12 @@ add_subdirectory(include)
 add_subdirectory(lib)
 add_subdirectory(tools)
 
+add_custom_target(check-torch-mlir-all)
+add_dependencies(check-torch-mlir-all
+  check-torch-mlir
+  check-torch-mlir-python
+  )
+
 if(MLIR_ENABLE_BINDINGS_PYTHON)
   # If parent projects want to configure where to place the python packages,
   # respect that.
