--- a/.github/workflows/buildAndTest.yml
+++ b/.github/workflows/buildAndTest.yml
@@ -1,6 +1,13 @@
 name: Build and Test
 
-on: [push, pull_request]
+on: 
+  push:
+  pull_request:
+  workflow_dispatch:
+    inputs:
+      release_id:
+        description: 'Release id to upload artifacts to'
+        default: ''
 
 jobs:
   build:
@@ -15,10 +22,10 @@ jobs:
       uses: actions/checkout@v2
       with:
         submodules: 'true'
-    - name: Install python depends
+    - name: Install MLIR Python depends
       run: |
         python -m pip install -r $GITHUB_WORKSPACE/external/llvm-project/mlir/python/requirements.txt
-    - name: Install pytorch_nightly depends
+    - name: Install PyTorch nightly depends
       run: |
         python -m pip install --pre torch torchvision -f https://download.pytorch.org/whl/nightly/cpu/torch_nightly.html
     - name: Install Ninja
@@ -54,3 +61,23 @@ jobs:
         cd $GITHUB_WORKSPACE
         export PYTHONPATH="$GITHUB_WORKSPACE/build/tools/torch-mlir/python_packages/torch_mlir"
         python -m e2e_testing.torchscript.main --config=refbackend -v
+
+    # TODO: Only build packages in full Release mode.
+    # On the other hand, having assertions on isn't too bad of an idea at this
+    # early stage.
+    - name: Build Python wheels and smoke test.
+      run: |
+        cd $GITHUB_WORKSPACE
+        python -m pip install wheel
+        TORCH_MLIR_CMAKE_BUILD_DIR="$GITHUB_WORKSPACE/build" \
+          TORCH_MLIR_CMAKE_BUILD_DIR_ALREADY_BUILT=1 \
+          ./build_tools/build_python_wheels.sh
+    - name: Upload Release Assets (if requested)
+      if: github.event.inputs.release_id != ''
+      id: upload-release-assets
+      uses: dwenegar/upload-release-assets@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.WORKFLOW_INVOCATION_TOKEN }}
+      with:
+        release_id: ${{ github.event.inputs.release_id }}
+        assets_path: ./wheelhouse/*.whl
