--- a/lib/Conversion/CMakeLists.txt
+++ b/lib/Conversion/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_subdirectory(TorchToLinalg)
 add_subdirectory(TorchToSCF)
 add_subdirectory(TorchToStd)
+add_subdirectory(TorchToTosa)
 
 # TODO: Automate this with add_torch_mlir_conversion_library.
 #get_property(torch_mlir_conversion_libs GLOBAL PROPERTY TORCH_MLIR_CONVERSION_LIBS)
@@ -18,5 +19,6 @@ add_mlir_library(TorchMLIRConversionPasses
   TorchMLIRTorchToLinalg
   TorchMLIRTorchToSCF
   TorchMLIRTorchToStd
+  TorchMLIRTorchToTosa
   #${torch_mlir_conversion_libs}
 )
