--- a/lib/CAPI/CMakeLists.txt
+++ b/lib/CAPI/CMakeLists.txt
@@ -6,6 +6,7 @@ add_mlir_public_c_api_library(TorchMLIRCAPI
   ADDITIONAL_HEADER_DIRS
   ${PROJECT_SOURCE_DIR}/include/torch-mlir-c/
 
+  ENABLE_AGGREGATION
   LINK_COMPONENTS
   Core
 
