[torch][Linalg]Import linalg_ext from IREE
example cmake command to compile with `linalg_ext`:
```
export
iree_dialects_path="path_to_iree/llvm-external-projects/iree-dialects"
cmake $GITHUB_WORKSPACE/external/llvm-project/llvm -GNinja\
...
-DLLVM_EXTERNAL_PROJECTS="torch-mlir;iree_dialects" \
-DLLVM_EXTERNAL_IREE_DIALECTS_SOURCE_DIR="${iree_dialects_path}"
```

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,13 @@ project(torch-mlir LANGUAGES CXX C)
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_CXX_STANDARD 14)
 
+if(LLVM_EXTERNAL_IREE_DIALECTS_SOURCE_DIR)
+  message(STATUS "Enabling iree_dialects in torch-mlir")
+  add_compile_definitions("TORCH_MLIR_ENABLE_IREE_DIALECTS")
+  include_directories(SYSTEM ${LLVM_EXTERNAL_IREE_DIALECTS_SOURCE_DIR}/include)
+  set(TORCH_MLIR_ENABLE_IREE_DIALECTS ON)
+endif()
+
 if(CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR)
   # Out-of-tree build
 
