--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -3,6 +3,10 @@ add_subdirectory(Conversion)
 add_subdirectory(Dialect)
 add_subdirectory(RefBackend)
 
+if(TORCH_MLIR_ENABLE_IREE_DIALECTS)
+  set(iree_dialect_libs IREELinalgExtDialect)
+endif()
+
 add_mlir_library(TorchMLIRInitAll
   InitAll.cpp
 
@@ -21,6 +25,8 @@ add_mlir_library(TorchMLIRInitAll
 
   TorchMLIRConversionPasses
   TorchMLIRRefBackend
+
+  ${iree_dialect_libs}
 )
 
 torch_mlir_target_includes(TorchMLIRInitAll)
