Add TMTensor dialect to torch-mlir
This is intended to explore support for non-structured ops that can't
be modeled by Linalg dialect. `tm_tensor.scan` and `tm_tensor.scatter`
are added as the first such ops. The dialect should aim to be
upstreamed in the future.

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -19,6 +19,9 @@ add_mlir_library(TorchMLIRInitAll
   TorchMLIRTorchDialect
   TorchMLIRTorchConversionPasses
 
+  TorchMLIRTMTensorPasses
+  TorchMLIRTMTensorDialect
+
   TorchMLIRConversionPasses
   TorchMLIRRefBackend
 )
